<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_profile"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dip"
        android:background="#FFF"
        android:orientation="vertical"
        android:padding="10dip" >

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/user_main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/header"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_form_first_name"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:maxLines="1"
                android:nextFocusDown="@+id/last_name" >
            </EditText>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_form_last_name"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:maxLines="1"
                android:nextFocusDown="@+id/gender" >
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/box"
                android:orientation="vertical" >

                <include layout="@layout/user_form_gender" >
                </include>

                <CheckBox
                    android:id="@+id/gender_show_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/user_form_show_profile" >
                </CheckBox>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/box"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/user_form_date_of_birth"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/skope_grey_dark" >
                </TextView>

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </DatePicker>

                <CheckBox
                    android:id="@+id/birthday_show_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/user_form_show_profile" >
                </CheckBox>
            </LinearLayout>

            <EditText
                android:id="@+id/home_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_form_home_town"
                android:inputType="textCapWords"
                android:maxLength="20" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/user_form_relationship"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/skope_grey_dark" />

            <Spinner
                android:id="@+id/relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_relationship_choices"
                android:prompt="@string/user_form_relationship" />

            <EditText
                android:id="@+id/work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_form_work"
                android:inputType="textCapWords"
                android:maxLength="40" />

            <EditText
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_form_education"
                android:inputType="textCapWords"
                android:maxLength="40" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:hint="@string/user_about_me"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="160" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="0" >

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:text="@string/save" >
                </Button>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>