<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/silver"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="160dip"
        android:background="@drawable/header_gradient" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:src="@drawable/login_header_logo" >
        </ImageView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_shadow" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/watermark"
        android:orientation="vertical"
        android:paddingBottom="16dip"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:paddingTop="20dip" >

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:hint="@string/login_hint_user"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLength="255"
            android:maxLines="1" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:hint="@string/login_hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="255"
            android:maxLines="1" >
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/login_button_login" >
            </Button>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/login_button_signup" >
            </Button>
        </LinearLayout>

        <TextView
            android:id="@+id/text_closedbeta"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:autoLink="web"
            android:text="@string/public_beta"
            android:gravity="bottom|left"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </TextView>
    </LinearLayout>

</LinearLayout>