<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/user_signup"
	android:background="@drawable/silver">
	<FrameLayout android:layout_height="180dip"
		android:layout_width="fill_parent" android:id="@+id/frameLayout1"
		android:background="@drawable/header_gradient">
		<ImageView android:src="@drawable/login_header_logo"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_gravity="center|center_vertical"></ImageView>
	</FrameLayout>
	<FrameLayout android:background="@drawable/border_shadow"
		android:layout_height="wrap_content" android:layout_width="fill_parent"></FrameLayout>
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="@drawable/watermark">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/frameLayout2"
			android:paddingTop="10dip" android:paddingRight="16dip"
			android:paddingLeft="16dip" android:paddingBottom="10dip"
			android:orientation="vertical">
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/linearLayout3">
				<EditText android:inputType="textEmailAddress"
					android:layout_height="wrap_content" android:maxLines="1"
					android:hint="@string/signup_hint_email" android:nextFocusDown="@+id/password1"
					android:id="@+id/signup_email" android:layout_width="match_parent"
					android:imeOptions="actionNext|flagNoExtractUi"></EditText>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/linearLayout1">
				<EditText android:layout_height="wrap_content"
					android:layout_width="match_parent" android:inputType="textPassword"
					android:hint="@string/signup_hint_password" android:layout_weight="1"
					android:maxLines="1" android:imeOptions="actionNext|flagNoExtractUi"
					android:nextFocusDown="@+id/password2" android:id="@+id/password1"></EditText>
				<EditText android:layout_height="wrap_content"
					android:layout_width="match_parent" android:inputType="textPassword"
					android:id="@+id/password2" android:hint="@string/signup_hint_confirm"
					android:layout_weight="1" android:maxLines="1" android:lines="1"
					android:imeOptions="actionNext|flagNoExtractUi"
					android:nextFocusDown="@+id/first_name"></EditText>
			</LinearLayout>
			<!-- <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" 
				android:id="@+id/linearLayout2"> <EditText android:layout_weight="1" android:id="@+id/email" 
				android:layout_height="wrap_content" android:hint="@string/signup_hint_email" 
				android:inputType="textEmailAddress" android:layout_width="match_parent" 
				android:maxLines="1" android:imeOptions="actionNext|flagNoExtractUi"></EditText> 
				</LinearLayout> -->
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/linearLayout1">
				<EditText android:id="@+id/first_name"
					android:layout_weight="1" android:layout_height="wrap_content"
					android:inputType="textCapWords" android:layout_width="match_parent"
					android:hint="@string/user_form_first_name" android:maxLines="1"
					android:imeOptions="actionNext|flagNoExtractUi"
					android:nextFocusDown="@+id/last_name"></EditText>
				<EditText android:layout_weight="1" android:layout_height="wrap_content"
					android:inputType="textCapWords" android:layout_width="match_parent"
					android:id="@+id/last_name" android:hint="@string/user_form_last_name"
					android:maxLines="1" android:imeOptions="actionNext|flagNoExtractUi"
					android:nextFocusDown="@+id/gender"></EditText>
			</LinearLayout>
			<include layout="@layout/user_form_gender"></include>
			<EditText android:layout_height="wrap_content" android:hint="Birthday"
				android:layout_width="match_parent" android:inputType="none"
				android:id="@+id/date_of_birth" android:editable="false">
			</EditText>
			<FrameLayout android:id="@+id/FrameLayout1"
				android:layout_weight="0" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
				<LinearLayout android:id="@+id/linearLayout2"
					android:layout_width="match_parent" android:layout_height="match_parent">
					<Button android:id="@+id/signup_button"
						android:layout_height="wrap_content" android:layout_gravity="bottom"
						android:text="@string/signup_button_signup" android:layout_width="wrap_content"></Button>
				</LinearLayout>
			</FrameLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>